# test-task

./: .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  README.MD  Vagrantfile  choosing-tech.md  readme.md
dataset/: DestinationDataset_13d.json  DestinationDataset_4lr.json  DestinationDataset_qfo.json  DestinationDataset_t3h.json  ENUTRI_SOURCES.json  NUTRI_DESTINATION.json  PRIMEDESTINATION.json  PRIMESOURCE.json  SourceDataset_13d.json  SourceDataset_4lr.json  SourceDataset_qfo.json
factory/: DAN-AP-T-ADF800-Spoke-IDN-HCPMCE-Ingestion.json
integrationRuntime/: ingestion-idn-hcpmce.json
linkedService/: 01_PRIME_AWS.json  01_PRIME_AZURE.json  02_ENUTRI.json  03_NUTRIPRO_AWS.json  04_EMS.json  DAN-AP-T-KVT800-S-DS-HCP.json  General_Linkservice_Datalake.json  datalake_msi.json  db2_CDSSDO00.json  landing_msi.json
pipeline/: 01_PRIME_AWS.json  01_PRIME_INITIAL.json  02_ENUTRI_INITIAL.json  03_NUTRIPRO_INITIAL.json  04_EMS.json  04_EMS_INITIAL.json
provision/: vagrant.yml
provision/roles/cert-generator/defaults/: main.yml
provision/roles/cert-generator/tasks/: cert_gen.yml  (+1 more)
trigger/: Trigger_13d.json  Trigger_4lr.json  Trigger_hmz.json  Trigger_qfo.json  Trigger_t3h.json
webapp/: build.gradle
webapp-golang/: README.MD  go.mod  go.sum  magefile.go  readme.md
webapp-golang/cmd/test-webapp/: main.go
webapp-golang/internal/handlers/: aux.go  handlers.go  responses.go
webapp-rust/: .gitignore  Cargo.toml  pixi.toml
webapp-rust/src/: handlers.rs  main.rs
webapp-spring-boot/: .dockerignore  Dockerfile  README.MD  build.gradle  settings.gradle
(+33 files in other folders)
