[package]
name = "webapp-rust"
version = "0.1.0"
edition = "2021"
authors = ["dev-junior"]
description = "Test webapp for tasting of rust"

[dependencies]
seahorse = "2.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
