[package]
name = "webapp-rust"
version = "0.1.0"
edition = "2024"
authors = ["dev-junior"]
description = "Test webapp for tasting of rust"

[dependencies]
seahorse = "2.2"
poem = "3.1.12"
tokio = { version = "1.39.1", features = ["rt-multi-thread", "macros"]}
serde_json = "1.0.68"
serde = "1.0.219"
sysinfo = "0.36.1"
